# kalibr-sdk-python

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  PUBLISH_INSTRUCTIONS.txt  README.md  SECURITY.md  SKILL.md  kalibr-sdk-python-overview.md  publish.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-npm.yml  publish.yml  test.yml
examples/: advanced_example.py  basic_agent.py  basic_example.py  cross_vendor.py  outcome_routing.py  test_e2e_intelligence.py  test_mas.py  travel_planner.py  unified_test.py
examples/advanced/: error_handling.py  multi_turn_conversation.py  parameter_routing.py  success_when_vs_manual_report.py
examples/crewai/: basic_crew.py
examples/langchain/: agent_example.py  async_example.py  basic_llm.py  chain_example.py
examples/openai_agents/: basic_agent.py
examples/voice/: basic_stt.py  basic_tts.py  voice_routing.py
kalibr/: __init__.py  agents_sync.py  client.py  collector.py  context.py  cost_adapter.py  decorators.py  feedback.py  intelligence.py  pricing.py  provision.py  router.py  simple_tracer.py  tokens.py  trace_capsule.py  trace_models.py  utils.py
kalibr/cli/: auth_cmd.py  capsule_cmd.py  init_cmd.py  main.py  prompt_cmd.py  rewriter.py  run.py  scanner.py  signup_cmd.py  status_cmd.py  verify_cmd.py
kalibr/instrumentation/: anthropic_instr.py  base.py  deepgram_instr.py  elevenlabs_instr.py  google_instr.py  huggingface_instr.py  openai_instr.py  openai_responses_instr.py  registry.py
kalibr/middleware/: auto_tracer.py
kalibr/templates/: .cursorrules  CLAUDE.md
kalibr_crewai/: README.md  __init__.py  callbacks.py  instrumentor.py
kalibr_langchain/: README.md  __init__.py  async_callback.py  callback.py  chat_model.py  pyproject.toml
kalibr_openai_agents/: README.md  __init__.py  processor.py
kalibr_voice/: __init__.py  livekit_instrumentor.py  pipecat_instrumentor.py
public/: .gitkeep
tests/: test_capsule_builder.py  test_cost_adapter.py  test_feedback_gate3.py  test_http_client_leak.py  test_huggingface_instrumentation.py  test_init_context_files.py  test_insights_sdk.py  test_instrumentation.py  test_intelligence.py  test_langchain_routing.py  test_pricing.py  test_responses_instrumentation.py  test_router.py  test_thread_safety.py  test_trace_models.py  test_voice_cost_adapter.py  test_voice_instrumentation.py  test_voice_pricing.py  test_voice_router.py
typescript/: package.json
