[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalibr"
version = "1.8.0"
description = "Outcome-aware LLM routing for production AI agents. Routes between models, tools, and parameters based on real success signals using Thompson Sampling. Automatic fallback, cost optimization, and continuous learning — no redeploy required."
authors = [{name = "Kalibr Team", email = "support@kalibr.systems"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = [
    "llm", "routing", "model-routing", "llm-routing", "fallback",
    "agent", "agents", "agent-reliability", "production", "ai",
    "openai", "anthropic", "thompson-sampling", "multi-armed-bandit",
    "execution-path", "model-selection", "llm-fallback", "crewai",
    "langchain", "outcome-routing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.110.1",
    "uvicorn>=0.25.0",
    "pydantic>=2.6.4",
    "typer>=0.9.0",
    "python-multipart>=0.0.9",
    "rich>=10.0.0",
    "requests>=2.31.0",
    # OpenTelemetry for SDK instrumentation (Phase 1)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
# Token counting (optional - for accurate token counts)
tokens = [
    "tiktoken>=0.8.0",
]
# LangChain integration
langchain = [
    "langchain-core>=0.1.0",
]
langchain-openai = [
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
]
langchain-anthropic = [
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.1.0",
]
langchain-google = [
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.10",
]
langchain-all = [
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.10",
]
# Voice AI integrations
elevenlabs = [
    "elevenlabs>=1.0.0",
]
deepgram = [
    "deepgram-sdk>=3.0.0",
]
voice = [
    "elevenlabs>=1.0.0",
    "deepgram-sdk>=3.0.0",
]
livekit = [
    "livekit-agents>=0.8.0",
]
pipecat = [
    "pipecat-ai>=0.0.30",
]
# CrewAI integration
crewai = [
    "crewai>=0.28.0",
]
# OpenAI Agents SDK integration
openai-agents = [
    "openai-agents>=0.0.3",
]
# All integrations
integrations = [
    "langchain-core>=0.1.0",
    "crewai>=0.28.0",
    "openai-agents>=0.0.3",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kalibr = "kalibr.cli.main:app"

[project.urls]
Homepage = "https://github.com/kalibr-ai/kalibr-sdk-python"
Documentation = "https://kalibr.systems/docs"
Repository = "https://github.com/kalibr-ai/kalibr-sdk-python"
Issues = "https://github.com/kalibr-ai/kalibr-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kalibr*", "kalibr_langchain*", "kalibr_crewai*", "kalibr_openai_agents*", "kalibr_voice*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"kalibr.templates" = ["CLAUDE.md", ".cursorrules"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
