[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalibr-langchain"
version = "0.1.0"
description = "Kalibr observability integration for LangChain applications"
authors = [{name = "Kalibr Team", email = "support@kalibr.systems"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = [
    "kalibr", "langchain", "observability", "tracing", "llm",
    "monitoring", "telemetry", "openai", "anthropic", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "kalibr>=1.1.0",
    "langchain-core>=0.1.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.1.0"]
anthropic = ["langchain-anthropic>=0.1.0"]
google = ["langchain-google-genai>=0.0.10"]
all = [
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kalibr-ai/kalibr-sdk-python"
Documentation = "https://github.com/kalibr-ai/kalibr-sdk-python#readme"
Repository = "https://github.com/kalibr-ai/kalibr-sdk-python"
Issues = "https://github.com/kalibr-ai/kalibr-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kalibr_langchain*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
